# PerformacenAwareProgramming

./: .gitignore  disassemble.go  disassemble_test.go  go.mod  go.work  instruction.go  instruction_type.go  l_41.asm  label.go  main.go  main_test.go  simulate.go  simulate_test.go  test.asm
8086-simulator/: disassemble.go  disassemble_test.go  instruction_type.go  simulate_test.go
haversine_distance_calculator/: .clang-format  CMakeLists.txt  haversine.cpp  haversine.h  haversine_bench.cpp  haversine_test.cpp  json.cpp  json.h  main.cpp  metrics.cpp  metrics.h  profiler.cpp  profiler.h  reference.cpp  reference.h  shared.h
haversine_point_generator/: go.mod  main.go  main_test.go
simulator_8086/: go.mod  instruction.go  label.go  simulate.go
